--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #FF4800;
+$primary: #2596BE;
 $secondary: #F2F2F4;
 $light: #FFFFFF;
 $dark: #1F1F2E;
